Revert "webapp/frame editor: fix overlapping buttons  -- #4000"
This reverts commit 62f7a07b87e72fb34f813921fc117f1551d50dad.

--- a/src/smc-webapp/frame-editors/_style.sass
+++ b/src/smc-webapp/frame-editors/_style.sass
@@ -1,9 +1,7 @@
 // make buttons and button-groups wrap with a larger vertical space (not 0 px)
 .cc-frame-tree-title-bar-buttons
-  overflow: hidden
-
-  > div.btn-group,
-  > button.btn
+  >div.btn-group,
+  >button.btn
     margin-bottom: 20px
 
 // same for the format bar, see
